# uniffi-template

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  template.udl
